# hackcodex

./: README.md
backend-api/: .gitignore  README.md  example_commands.txt  prompt_profile.txt  prompt_profile_backup.txt  pyproject.toml
backend-api/src/: endpoint_add_info.py  endpoint_process_query.py  image_manager.py  main.py  query_chatgpt.py
frontend/: .env.template  .gitignore  App.tsx  README.md  app.json  package.json  record.ts
frontend/components/: cancel.tsx  complete.tsx  index.ts  info-container.tsx  loading.tsx  microphone.tsx
frontend/config/: index.ts
frontend/hooks/: index.ts  useDataRecording.ts  useQueryRecording.ts
frontend/pages/: assistant.tsx  data.tsx  info.tsx
frontend/services/: backend.ts  openapi.ts
frontend/store/: index.ts
frontend/types/: index.ts
