[tool.poetry]
name = "hackcodex-python-api"
version = "0.1.0"
description = ""
authors = ["Ronald van den Broek <ronald.vandenbroek@live.nl>"]
readme = "README.md"
packages = [{include = "hackcodex_python_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask-restful = "^0.3.10"
flask = "^2.3.2"
langchain = "^0.0.189"
duckdb = "^0.8.0"
openai = "^0.27.7"
tiktoken = "^0.4.0"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
chromadb = "^0.3.25"
unstructured = "^0.7.1"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
